fix wrap on readability urls. add validation to http responses.

--- a/HackerNews/readability_article.css
+++ b/HackerNews/readability_article.css
@@ -13,6 +13,10 @@ pre {
     white-space: pre-wrap;
 }
 
+a {
+    word-wrap: break-word;
+}
+
 .article_info {
 	font-size: .9em;	
 	line-height: 1.35;			
